# trading-strategy-backtest

./: .gitignore  QUICK_START.md  README.md  app.py  custom_strategy.py  custom_strategy.txt  pyproject.toml  run.sh  trader.py
saved_backtests/: backtests.json
saved_strategies/: strategies.json
static/css/: style.css
templates/: history.html  index.html  results.html
