[project]
name = "backtesting"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas-ta>=0.4.71b0",
    "plotly>=6.3.1",
    "ta>=0.11.0",
    "tabulate>=0.9.0",
    "yfinance>=0.2.66",
]
